# cs2-contracts-finder

./: .gitignore  contracts.py  example.env  pyproject.toml  run.py
contracts/: __init__.py  find_best_contracts.py  get_data.py  parse_data.py  write_data.py
schemas/: __init__.py  item.py  response.py
utils/: _init__.py  adjusted_params.py  generate_url.py  url_params.py
utils/enums/: __init__.py  significances.py
